2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* bspcmdline01/init.c: Fix assert conditional.

2010-04-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* POSIX/flockfile.c, POSIX/funlockfile.c, POSIX/ftrylockfile.c: New.
	* POSIX/Makefile.am: Add flockfile, funlockfile, ftrylockfile.

2010-02-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block10/.cvsignore: New file.

2010-01-21	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block05/block05.png, block10/block10.doc, block10/init.c,
	block10/.cvsignore, block10/block10.scn, block10/block10.png,
	block10/Makefile.am: New files.
	* configure.ac, Makefile.am: Update for new files.
	* block05/block05.doc: Update for new state transitions.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block08/.cvsignore, block09/.cvsignore: New files.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block08/init.c: Remove warning.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block08/block08.scn, block08/init.c: Add starting and ending messages
	so the scripts detect successful exit.

2010-01-18	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block09/block09.doc, block09/init.c, block09/.cvsignore,
	block09/block09.scn, block09/Makefile.am: New files.
	* configure.ac, Makefile.am: Update for new files.
	* block05/block05.doc: Update for new state transitions.
	* block05/init.c, block06/init.c: Update for block device API change.

2010-01-18	Oleg Kravtsov <Oleg.Kravtsov@oktetlabs.ru>

	* block08/bdbuf_test1_1.c, block08/bdbuf_test1_2.c,
	block08/bdbuf_test1_3.c, block08/bdbuf_test1_4.c,
	block08/bdbuf_test1_5.c, block08/bdbuf_test2_1.c,
	block08/bdbuf_test2_2.c, block08/bdbuf_test3_1.c,
	block08/bdbuf_test3_2.c, block08/bdbuf_test3_3.c,
	block08/bdbuf_test4_1.c, block08/bdbuf_test4_2.c,
	block08/bdbuf_test4_3.c, block08/bdbuf_tests.c, block08/bdbuf_tests.h,
	block08/block08.doc, block08/block08.scn, block08/.cvsignore,
	block08/init.c, block08/Makefile.am, block08/system.h,