@@ -4,11 +4,12 @@
 
 ACLOCAL_AMFLAGS = -I ../aclocal
 
-SUBDIRS = bspcmdline01 cpuuse malloctest heapwalk putenvtest monitor \
+SUBDIRS = POSIX
+
+SUBDIRS += bspcmdline01 cpuuse malloctest heapwalk putenvtest monitor \
     monitor02 rtmonuse stackchk stackchk01 termios termios01 termios02 \
     rtems++ tztest block01 block02 block03 block04 block05 block06 block07 \
     block08 block09 block10 stringto01
-SUBDIRS += POSIX
 
 include $(top_srcdir)/../automake/subdirs.am
 include $(top_srcdir)/../automake/local.am
